Fixed too much padding on body

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    padding-top: 3em;
+    padding-top: 2.5em;
 }
 
 .bars-container {
